<resources>
    <string name="app_name">MicroManager</string>
    <string name="hello">Hello from strings.xml</string>
    <string name="google_client_id">168037840247-anu4hfobuqucmnpfsflvfbnrgjcp4m9i.apps.googleusercontent.com</string>
    <string name="nav_schedules">Schedule</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_results">Results</string>
    <string name="name">TextView</string>
    <string name="typeOfEvent">TextView</string>
    <string name="duration">TextView</string>
    <string name="longitude">TextView</string>
    <string name="latitude">TextView</string>
    <string name="status_done">Done</string>
    <string name="status_running">Running</string>
    <string name="schedule_new_previous">Previous</string>
    <string name="schedule_new_next">Next</string>
    <string name="schedule_new_submit">Submit</string>
    <string name="new_planning_events_fragment">Flexible Events</string>
    <string name="new_fixed_events_fragment">Fixed Events</string>
    <string name="new_user_prefs_fragment">Create New Schedule</string>
    <string name="schedule_name">Schedule Name</string>
    <string name="bf_time">Breakfast Time</string>
    <string name="lunch_time">Lunch Time</string>
    <string name="dinner_time">Dinner Time</string>
    <string name="social_time">Social Time</string>
    <string name="recreation_time">Recreation Time</string>
    <string name="schedule_id">ID</string>
    <string name="schedule_status">Status</string>
    <string name="homework_time">Homework Time</string>
    <string name="hint_name">Name</string>
    <string name="hint_duration">Duration</string>
    <string name="hint_longitude">Longitude</string>
    <string name="hint_latitude">Latitude</string>
    <string name="event_type">Type</string>
    <string name="event_duration">Duration</string>
    <string name="event_longitude">Longitude</string>
    <string name="event_latitude">Latitude</string>
    <string name="event_end">End</string>
    <string name="event_start">Start</string>
</resources>
